--- a/config.toml
+++ b/config.toml
@@ -4,3 +4,10 @@ documentBaseUrl = "https://blog.yappo.jp/entry/"
 feedXmlPath = "docs/feed.xml"
 feedXmlUrl = "https://blog.yappo.jp/feed.xml"
 indexHtmlPath = "docs/index.html"
+siteTitle = "YappoLogs2"
+siteDescription = "YappoLogs2の最新RSS Feed"
+siteLanguage = "ja"
+faviconUrl = "/favicon.png"
+authorName = "Yappo"
+authorUrl = "https://x.com/yappo"
+authorIconUrl = "https://pbs.twimg.com/profile_images/1770102954382831616/H3LXaTgp_normal.jpg"
