--- a/config.toml
+++ b/config.toml
@@ -15,3 +15,5 @@ imageThumbWidth = 480
 imageFullMaxWidth = 1920
 imageScaleMethod = "quality"
 imageJpegQuality = 0.9
+stylesheets = ["https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css"]
+scripts = ["https://cdn.tailwindcss.com", "/entry/assets/pologen-images.js"]
