Added OGP image

--- a/config.toml
+++ b/config.toml
@@ -17,3 +17,12 @@ imageScaleMethod = "quality"
 imageJpegQuality = 0.9
 stylesheets = ["https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css"]
 scripts = ["https://cdn.tailwindcss.com", "/entry/assets/pologen-images.js"]
+ogpEnabled = true
+ogpWidth = 1200
+ogpHeight = 630
+ogpBackgroundColor = "#101827"
+ogpTitleColor = "#FFFFFF"
+ogpBodyColor = "#E5E7EB"
+ogpAccentColor = "#F97316"
+ogpFontPath = "fonts/LINESeedJP_TTF_Rg.ttf"
+ogpAuthorIconPath = "docs/entry/assets/yappo.jpg"
