added side menu

--- a/config.toml
+++ b/config.toml
@@ -5,7 +5,7 @@ feedXmlPath = "docs/feed.xml"
 feedXmlUrl = "https://blog.yappo.jp/feed.xml"
 indexHtmlPath = "docs/index.html"
 siteTitle = "YappoLogs2"
-siteDescription = "YappoLogs2の最新RSS Feed"
+siteDescription = "Yappoのブログだよ"
 siteLanguage = "ja"
 faviconUrl = "/favicon.png"
 authorName = "Yappo"
@@ -26,3 +26,5 @@ ogpBodyColor = "#E5E7EB"
 ogpAccentColor = "#F97316"
 ogpFontPath = "fonts/LINESeedJP_TTF_Rg.ttf"
 ogpAuthorIconPath = "docs/entry/assets/yappo.jpg"
+recentEntryCount = 10
+links = { "GitHub" = "https://github.com/yappo", "X" = "https://x.com/yappo", "Pologen" = "https://github.com/yappo/Pologen", "Blog repository" = "https://github.com/yappo/blog.yappo.jp" }
