wrote side bar article

--- a/config.toml
+++ b/config.toml
@@ -16,7 +16,7 @@ imageFullMaxWidth = 1920
 imageScaleMethod = "quality"
 imageJpegQuality = 0.9
 stylesheets = ["https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css"]
-scripts = ["https://cdn.tailwindcss.com", "/entry/assets/pologen-images.js"]
+scripts = ["https://cdn.tailwindcss.com", "/entry/assets/pologen.js"]
 ogpEnabled = true
 ogpWidth = 1200
 ogpHeight = 630
